gateway: 5-27 服务管理 - tcp和grpc新增更新接口
